# ecommerce-support

./: .env.example  .gitignore  README.md  docker-compose.yml
demo/: demo.ts
mcp-server/: .dockerignore  Dockerfile  package-lock.json  package.json
mcp-server/public/: index.html
mcp-server/src/: config.ts  index.ts  server.ts
mcp-server/src/agent/: orchestrator.ts  prompts.ts
mcp-server/src/api/: chat.ts
mcp-server/src/db/: connection.ts  models.ts  seed.ts
mcp-server/src/tools/: index.ts  inventory-check.ts  order-lookup.ts  policy-search.ts  response-draft.ts
mcp-server/tests/: test-tools.ts
rag-service/: .dockerignore  Dockerfile  pyproject.toml
rag-service/data/policies/: compensation_policy.md  returns_policy.md  shipping_policy.md  warranty_policy.md
rag-service/src/: config.py  ingest.py  main.py  models.py  retriever.py
